# formalith

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustc-ice-2025-05-29T08_09_49-18100.txt  test.typ
.cargo/: config.toml
docs/: typstts.html
src/: combinatorics.rs  lib.rs  main.rs  parser.rs  traits.rs
src/context/: mod.rs
src/field/: commons.rs  mod.rs
src/field/commons/: integer.rs  matrix.rs  real.rs
src/matrix/: mod.rs
src/parser/: lexer.rs  mod.rs  parser.rs
src/polynom/: mod.rs
src/printer/: mod.rs
src/term/: add.rs  flags.rs  fun.rs  mod.rs  mul.rs  pow.rs  symbol.rs  term_op.rs  term_ring.rs  value.rs
src/traits/: optional_default.rs
tests/: parser.rs
