[package]
name = "formalith"
version = "0.1.0"
edition = "2024"

[dependencies]
append-only-vec = "0.1.7"
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"
dyn-hash = "0.2.2"
malachite = { version = "0.5.1" }
owo-colors = "4.2.0"
phf = { version = "0.11.3", features = [ "macros" ] }
supports-color = "3.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typenum = "1.19.0"

# [profile.release]
# debug = 1
