[package]
name = "formalith"
description = "Modern computer algebra system focused on flexibility"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/supersurviveur/formalith"
license-file = "LICENSE"
readme = "README.md"
keywords = ["mathematics", "symbolic", "algebra"]
categories = ["Mathematics", "Science"]

[dependencies]
append-only-vec = "0.1"
dyn-clone = "1"
dyn-eq = "0.1"
dyn-hash = "1"
malachite = { version = "0.9", default-features = false, features = ["naturals_and_integers", "rationals"] }
owo-colors = "4"
supports-color = "3"
typenum = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"

# [profile.release]
# debug = 1

[features]
default = []
rust-analyzer = []
